The Big Booty Pooty

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--Unit 1 Project
 Requirements
-[  ] Two Different Headlines
+[ x ] Two Different Headlines
 [  ] Bold and Italic Text
 [  ] One List
 [  ] Three Images
@@ -22,6 +22,29 @@ Select ONE Additional Feature to Add
     </head>
     <body>
 
+    <h1>The Big Pooty</h1>
         
+    <h2>What is a Pooty?</h2>
+
+    <p> Pooty is my dog <br>
+        He likes scratching walls <br>
+        But Pooty is not big, <br>
+        He's not even a foot tall! <br>
+        He came into my life my sophomore year. <br>
+        He came as a surprise to everyone here. <br>
+        And although he's not big, his booty sure is <br>
+        The Big Booty Pooty, what a perfect fit!</p>
+
+    <h2>Why is he <em>The</em> Pooty?</h2>
+
+    <p>Because he is the only one! The only Pooty in the world to live with me and my family.</p>
+
+    <h2>Why You Should Get a Pooty</h2>
+
+    <ul>
+        <li>he's got a big booty</li>
+        
+    </ul>
+
     </body>
 </html>
