color and images

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!--Unit 1 Project
 Requirements
 [ x ] Two Different Headlines
-[  ] Bold and Italic Text
-[  ] One List
+[ x ] Bold and Italic Text
+[ x ] One List
 [  ] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include at least three emojis
 [ no ] Feature 2 - Include a background image
-[ no ] Feature 3 - Add color with style=
+[ yes ] Feature 3 - Add color with style=
 [ no ] Feature 4 - Include a description list
 [ no ] Feature 5 - Include <font> tag
 -->
@@ -26,6 +26,8 @@ Select ONE Additional Feature to Add
         
     <h2>What is a Pooty?</h2>
 
+        <img (NOTE- download photos of pooty)
+
     <p> Pooty is my dog <br>
         He likes scratching walls <br>
         But Pooty is not big, <br>
@@ -37,14 +39,28 @@ Select ONE Additional Feature to Add
 
     <h2>Why is he <em>The</em> Pooty?</h2>
 
-    <p>Because he is the only one! The only Pooty in the world to live with me and my family.</p>
+    <p>Because he is the only one! The only Pooty in the world to live with me and my family. <br>
+    <em><strong>Did you know?...</strong></em>Pooty's full government name is <ins>Pluto Manuel R. Virtusio</ins></p>
 
     <h2>Why You Should Get a Pooty</h2>
 
+         <img src="image1-2-2-scaled.jpeg" width="300" style="float:right">
+
     <ul>
         <li>he's got a big booty</li>
-        
+        <li>he has big beady eyes</li>
+        <li>he loves you even when you're sad</li>
+        <li>his feet smell like fritos</li>
+        <li>he's super photogenic</li>
     </ul>
+
+   <h2>Pooty's Acrostic Poem</h2>
+
+   <p style="background-color:pink"><strong>P</strong>lump and voluptuous</p>
+    <p style="background-color:rgb(209, 225, 238)"><strong>O</strong>utstandingly odd</p>
+    <strong>O</strong>nly so<br>
+    <strong>T</strong>iny,<br>
+    <strong>Y</strong>et he yaps a lot! </p>
 
     </body>
 </html>
