--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@ Select ONE Additional Feature to Add
     <body>
 
     <h1>The Big Pooty</h1>
-        
+     
     <h2>What is a Pooty?</h2>
 
-        <img (NOTE- download photos of pooty)
+        <img src="1000015676.jpg">
 
     <p> Pooty is my dog <br>
         He likes scratching walls <br>
