--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Requirements
 [ x ] Two Different Headlines
 [ x ] Bold and Italic Text
 [ x ] One List
-[  ] Three Images
+[ x ] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include at least three emojis
@@ -20,13 +20,18 @@ Select ONE Additional Feature to Add
         <meta charset="utf-8">
         <title>Unit 1 Project!</title>
     </head>
+
+    <style>
+p {style="background-image: url('IMG_20240627_142704.jpg');"}
+    </style>
+
     <body>
 
     <h1>The Big Pooty</h1>
      
     <h2>What is a Pooty?</h2>
 
-        <img src="1000015676.jpg">
+        <img src="1000015676.jpg" width="200" style="float:right">
 
     <p> Pooty is my dog <br>
         He likes scratching walls <br>
@@ -44,7 +49,7 @@ Select ONE Additional Feature to Add
 
     <h2>Why You Should Get a Pooty</h2>
 
-         <img src="image1-2-2-scaled.jpeg" width="300" style="float:right">
+         <img src="1000017489.jpg" width="200" style="float:right">
 
     <ul>
         <li>he's got a big booty</li>
@@ -61,6 +66,9 @@ Select ONE Additional Feature to Add
     <strong>O</strong>nly so<br>
     <strong>T</strong>iny,<br>
     <strong>Y</strong>et he yaps a lot! </p>
+
+    <img src="1000019985.jpg" width="200">
+    <img src="1000019077.jpg" width="200">
 
     </body>
 </html>
